# raman-spectra

./: .gitignore  README.md  pyproject.toml
notebooks/: eda.ipynb  ml.ipynb
src/raman_spectra/: __init__.py  config.py  data.py  model.py  preprocess.py  train.py
